--- a/css/styles.css
+++ b/css/styles.css
@@ -557,6 +557,7 @@ pre code {
   }
 }
 @media (min-width: 768px) {
+
   
   #g-form {
     width: 100% !important;
@@ -7297,6 +7298,7 @@ button.bg-dark:focus {
   }
 }
 @media (min-width: 768px) {
+  
   .float-md-left {
     float: left !important;
   }
@@ -10148,12 +10150,24 @@ h3 {
     font-size: 1.5em;
   }
 }
+
+.header-background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: url('../images/cinema-background.gif') center no-repeat;
+  background-size: 100% 100%;
+  z-index: -1;
+  margin-bottom: 6.5rem;
+
+}
 .masthead {
   display: flex;
   align-items: center;
   height: 100vh !important;
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
+  background-color: rgba(0, 0, 0, 0.3) !important;
 }
 .masthead .masthead-heading {
   font-size: 2.75rem;
@@ -10165,8 +10179,8 @@ h3 {
 .masthead .masthead-avatar {
   width: 15rem;
 }
-
 @media (min-width: 992px) {
+
   .masthead {
     padding-top: calc(6rem + 104px);
     padding-bottom: 6rem;
@@ -10288,4 +10302,17 @@ form .row:first-child .floating-label-form-group {
 #contact-form {
   margin: 2em auto !important;
   padding: 0 !important;
+}
+#request {
+  color: #fff !important;
+}
+
+.freebirdFormviewerViewNavigationPasswordWarning {
+  color: #fff !important;
+}
+
+@media(max-width: 768px) {
+  .header-background {
+    margin-bottom: 4.8rem !important;
+  }
 }
